Otros cambios a nivel de módulo - Cambios en la compilación y la API de C

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-03-31 18:37-0600\n"
+"PO-Revision-Date: 2021-04-06 03:32-0500\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3576,7 +3576,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.5.rst:2096
 msgid "Other module-level changes"
-msgstr ""
+msgstr "Otros cambios a nivel de módulo"
 
 #: ../Doc/whatsnew/3.5.rst:2098
 msgid ""
@@ -3585,10 +3585,14 @@ msgid ""
 "objects <bytes-like object>`. (Contributed by Serhiy Storchaka in :issue:"
 "`23001`.)"
 msgstr ""
+"Ahora muchas funciones en los módulos :mod:`mmap`, :mod:`ossaudiodev`, :mod:"
+"`socket`, :mod:`ssl` y :mod:`codecs` aceptan :term:`objetos de tipo bytes "
+"<bytes-like object>` que se pueden escribir. (Contribución de Serhiy "
+"Storchaka en :issue:`23001`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2105
 msgid "Optimizations"
-msgstr ""
+msgstr "Optimizaciones"
 
 #: ../Doc/whatsnew/3.5.rst:2107
 msgid ""
@@ -3598,6 +3602,11 @@ msgid ""
 "``readdir`` or ``FindFirstFile``/``FindNextFile`` system calls.  "
 "(Contributed by Ben Hoyt with help from Victor Stinner in :issue:`23605`.)"
 msgstr ""
+"La función :func:`os.walk` se aceleró de 3 a 5 veces en los sistemas POSIX y "
+"de 7 a 20 veces en Windows. Esto se hizo usando la nueva función :func:`os."
+"scandir`, el cual expone la información del archivo de las llamadas al "
+"sistema ``readdir`` o ``FindFirstFile``/``FindNextFile``. (Contribución de "
+"Ben Hoyt con ayuda de Victor Stinner en :issue:`23605`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2113
 msgid ""
@@ -3606,6 +3615,10 @@ msgid ""
 "to allocate memory for these objects. (Contributed by Victor Stinner in :"
 "issue:`21233`.)"
 msgstr ""
+"La construcción de ``bytes(int)`` (llenado con cero bytes) es más rápida y "
+"usa menos memoria para objetos grandes. Se usa ``calloc()`` en lugar de "
+"``malloc()`` para asignar memoria para estos objetos. (Contribución de "
+"Victor Stinner en :issue:`21233`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2118
 msgid ""
@@ -3617,12 +3630,22 @@ msgid ""
 "by Antoine Pitrou, Michel Albert, and Markus in :issue:`21486`, :issue:"
 "`21487`, :issue:`20826`, :issue:`23266`.)"
 msgstr ""
+"Algunas operaciones en :mod:`ipaddress` :class:`~ipaddress.IPv4Network` y :"
+"class:`~ipaddress.IPv6Network` se aceleraron masivamente, tal como :meth:"
+"`~ipaddress.IPv4Network.subnets`, :meth:`~ipaddress.IPv4Network.supernet`, :"
+"func:`~ipaddress.summarize_address_range`, :func:`~ipaddress."
+"collapse_addresses`. La velocidad puede variar de 3 a 15 veces. "
+"(Contribución de Antoine Pitrou, Michel Albert y Markus en :issue:`21486`, :"
+"issue:`21487`, :issue:`20826`, :issue:`23266`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2126
 msgid ""
 "Pickling of :mod:`ipaddress` objects was optimized to produce significantly "
 "smaller output.  (Contributed by Serhiy Storchaka in :issue:`23133`.)"
 msgstr ""
+"Se optimizó pickling de objetos :mod:`ipaddress` para producir una salida "
+"significativamente menor. (Contribución de Serhiy Storchaka en :issue:"
+"`23133`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2129
 msgid ""
@@ -3630,6 +3653,9 @@ msgid ""
 "(Contributed by Serhiy Storchaka in :issue:`15381` and David Wilson in :"
 "issue:`22003`.)"
 msgstr ""
+"Ahora muchas operaciones en :class:`io.BytesIO` son de 50% a 100% más "
+"rápidas. (Contribución de Serhiy Storchaka en :issue:`15381` y de David "
+"Wilson en :issue:`22003`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2133
 msgid ""
@@ -3638,18 +3664,26 @@ msgid ""
 "best cases. (Contributed by Serhiy Storchaka in :issue:`20416` and :issue:"
 "`23344`.)"
 msgstr ""
+"Ahora la función :func:`marshal.dumps` es más rápida: 65--85% en las "
+"versiones 3 y 4, 20--25% en las versiones 0 a 2 con datos típicos, y hasta 5 "
+"veces en el mejor de los casos. (Contribución de Serhiy Storchaka en :issue:"
+"`20416` y :issue:`23344`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2138
 msgid ""
 "The UTF-32 encoder is now 3 to 7 times faster. (Contributed by Serhiy "
 "Storchaka in :issue:`15027`.)"
 msgstr ""
+"Ahora el codificador UTF-32 es de 3 a 7 veces más rápido. (Contribución de "
+"Serhiy Storchaka en :issue:`15027`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2141
 msgid ""
 "Regular expressions are now parsed up to 10% faster. (Contributed by Serhiy "
 "Storchaka in :issue:`19380`.)"
 msgstr ""
+"Ahora las expresiones regulares se analizan hasta un 10% más rápido. "
+"(Contribución de Serhiy Storchaka en :issue:`19380`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2144
 msgid ""
@@ -3657,6 +3691,9 @@ msgid ""
 "``ensure_ascii=False`` as fast as with ``ensure_ascii=True``. (Contributed "
 "by Naoki Inada in :issue:`23206`.)"
 msgstr ""
+"Se optimizó la función :func:`json.dumps` para ejecutarse con "
+"``ensure_ascii=False`` tan rápido como con ``ensure_ascii=True``. "
+"(Contribución de Naoki Inada en :issue:`23206`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2148
 msgid ""
@@ -3665,6 +3702,9 @@ msgid ""
 "class:`type` as its metaclass. (Contributed Georg Brandl by in :issue:"
 "`22540`.)"
 msgstr ""
+"Las funciones :c:func:`PyObject_IsInstance` y :c:func:`PyObject_IsSubclass` "
+"se aceleraron en el caso común de que el segundo argumento tenga :class:"
+"`type` como su metaclase. (Contribución de Georg Brandl en :issue:`22540`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2153
 msgid ""
@@ -3672,24 +3712,34 @@ msgid ""
 "improvement in some benchmarks. (Contributed by Antoine Pitrou in :issue:"
 "`22847`.)"
 msgstr ""
+"Se mejoró ligeramente el almacenamiento en caché del método, lo que arrojó "
+"una mejora del rendimiento de hasta un 5% en algunos puntos de referencia. "
+"(Contribución de Antoine Pitrou en :issue:`22847`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2157
 msgid ""
 "Objects from the :mod:`random` module now use 50% less memory on 64-bit "
 "builds.  (Contributed by Serhiy Storchaka in :issue:`23488`.)"
 msgstr ""
+"Ahora los objetos del módulo :mod:`random` usan un 50% menos de memoria en "
+"compilaciones de 64 bits. (Contribución de Serhiy Storchaka en :issue:"
+"`23488`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2160
 msgid ""
 "The :func:`property` getter calls are up to 25% faster. (Contributed by Joe "
 "Jevnik in :issue:`23910`.)"
 msgstr ""
+"Las llamadas getter de :func:`property` son hasta un 25% más rápidas. "
+"(Contribución de Joe Jevnik en :issue:`23910`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2163
 msgid ""
 "Instantiation of :class:`fractions.Fraction` is now up to 30% faster. "
 "(Contributed by Stefan Behnel in :issue:`22464`.)"
 msgstr ""
+"Ahora la instanciación de :class:`fractions.Fraction` es hasta un 30% más "
+"rápida. (Contribución de Stefan Behnel en :issue:`22464`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2166
 msgid ""
@@ -3698,46 +3748,50 @@ msgid ""
 "significantly faster for searching 1-character substrings. (Contributed by "
 "Serhiy Storchaka in :issue:`23573`.)"
 msgstr ""
+"Ahora los métodos de cadena de caracteres :meth:`~str.find`, :meth:`~str."
+"rfind`, :meth:`~str.split`, :meth:`~str.partition` y el operador :keyword:"
+"`in` son significativamente más rápidos para buscar subcadenas de 1 "
+"carácter. (Contribución de Serhiy Storchaka en :issue:`23573`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2173
 msgid "Build and C API Changes"
-msgstr ""
+msgstr "Cambios en la compilación y la API de C"
 
 #: ../Doc/whatsnew/3.5.rst:2175
 msgid "New ``calloc`` functions were added:"
-msgstr ""
+msgstr "Se agregaron las nuevas funciones ``calloc``:"
 
 #: ../Doc/whatsnew/3.5.rst:2177
 msgid ":c:func:`PyMem_RawCalloc`,"
-msgstr ""
+msgstr ":c:func:`PyMem_RawCalloc`,"
 
 #: ../Doc/whatsnew/3.5.rst:2178
 msgid ":c:func:`PyMem_Calloc`,"
-msgstr ""
+msgstr ":c:func:`PyMem_Calloc`,"
 
 #: ../Doc/whatsnew/3.5.rst:2179
 msgid ":c:func:`PyObject_Calloc`."
-msgstr ""
+msgstr ":c:func:`PyObject_Calloc`."
 
 #: ../Doc/whatsnew/3.5.rst:2181
 msgid "(Contributed by Victor Stinner in :issue:`21233`.)"
-msgstr ""
+msgstr "(Contribución de Victor Stinner en :issue:`21233`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2183
 msgid "New encoding/decoding helper functions:"
-msgstr ""
+msgstr "Nuevas funciones auxiliares de codificación/decodificación:"
 
 #: ../Doc/whatsnew/3.5.rst:2185
 msgid ":c:func:`Py_DecodeLocale` (replaced ``_Py_char2wchar()``),"
-msgstr ""
+msgstr ":c:func:`Py_DecodeLocale` (reemplazó ``_Py_char2wchar()``),"
 
 #: ../Doc/whatsnew/3.5.rst:2186
 msgid ":c:func:`Py_EncodeLocale` (replaced ``_Py_wchar2char()``)."
-msgstr ""
+msgstr ":c:func:`Py_EncodeLocale` (reemplazó ``_Py_wchar2char()``)."
 
 #: ../Doc/whatsnew/3.5.rst:2188
 msgid "(Contributed by Victor Stinner in :issue:`18395`.)"
-msgstr ""
+msgstr "(Contribución de Victor Stinner en :issue:`18395`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2190
 msgid ""
@@ -3745,6 +3799,9 @@ msgid ""
 "encode error with ``\\N{...}`` escapes. (Contributed by Serhiy Storchaka in :"
 "issue:`19676`.)"
 msgstr ""
+"Una nueva función :c:func:`PyCodec_NameReplaceErrors` para reemplazar el "
+"error de codificación unicode con ``\\N{...}`` escapes. (Contribución de "
+"Serhiy Storchaka en :issue:`19676`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2194
 msgid ""
@@ -3752,12 +3809,17 @@ msgid ""
 "but accepts a ``va_list`` argument. (Contributed by Antoine Pitrou in :issue:"
 "`18711`.)"
 msgstr ""
+"Una nueva función :c:func:`PyErr_FormatV` similar a :c:func:`PyErr_Format`, "
+"pero acepta un argumento ``va_list``. (Contribución de Antoine Pitrou en :"
+"issue:`18711`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2198
 msgid ""
 "A new :c:data:`PyExc_RecursionError` exception. (Contributed by Georg Brandl "
 "in :issue:`19235`.)"
 msgstr ""
+"Una nueva excepción :c:data:`PyExc_RecursionError`. (Contribución de Georg "
+"Brandl en :issue:`19235`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2201
 msgid ""
@@ -3766,6 +3828,10 @@ msgid ""
 "phase extension module initialization. (Contributed by Petr Viktorin in :"
 "issue:`24268`.)"
 msgstr ""
+"Se introdujeron las nuevas funciones :c:func:`PyModule_FromDefAndSpec`, :c:"
+"func:`PyModule_FromDefAndSpec2` y :c:func:`PyModule_ExecDef` por :pep:`489` "
+"-- inicialización del módulo de extensión multifase. (Contribución de Petr "
+"Viktorin en :issue:`24268`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2206
 msgid ""
@@ -3774,17 +3840,26 @@ msgid ""
 "(Contributed by Benjamin Peterson in :issue:`21176`.  See also :pep:`465` "
 "for details.)"
 msgstr ""
+"Nuevas funciones :c:func:`PyNumber_MatrixMultiply` y :c:func:"
+"`PyNumber_InPlaceMatrixMultiply` para realizar la multiplicación de "
+"matrices. (Contribución de Benjamin Peterson en :issue:`21176`. Consultar "
+"también :pep:`465` para más detalles.)"
 
 #: ../Doc/whatsnew/3.5.rst:2212
 msgid ""
 "The :c:member:`PyTypeObject.tp_finalize` slot is now part of the stable ABI."
 msgstr ""
+"Ahora el espacio :c:member:`PyTypeObject.tp_finalize` es parte de la ABI "
+"estable."
 
 #: ../Doc/whatsnew/3.5.rst:2214
 msgid ""
 "Windows builds now require Microsoft Visual C++ 14.0, which is available as "
 "part of `Visual Studio 2015 <https://www.visualstudio.com/>`_."
 msgstr ""
+"Ahora las compilaciones de Windows requieren Microsoft Visual C++ 14.0, que "
+"está disponible como parte de `Visual Studio 2015 <https://www.visualstudio."
+"com/>`_."
 
 #: ../Doc/whatsnew/3.5.rst:2217
 msgid ""
@@ -3793,24 +3868,34 @@ msgid ""
 "without it, although if the tag is present and mismatched, the extension "
 "won't be loaded):"
 msgstr ""
+"Ahora los módulos de extensión incluyen una etiqueta de información de la "
+"plataforma en su nombre de archivo en algunas plataformas (la etiqueta es "
+"opcional y CPython importará las extensiones sin ella, aunque si la etiqueta "
+"está presente y no coincide, no se cargará la extensión):"
 
 #: ../Doc/whatsnew/3.5.rst:2222
 msgid ""
 "On Linux, extension module filenames end with ``.cpython-<major><minor>m-"
 "<architecture>-<os>.pyd``:"
 msgstr ""
+"En Linux, los nombres de archivo del módulo de extensión termina con ``."
+"cpython-<major><minor>m-<architecture>-<os>.pyd``:"
 
 #: ../Doc/whatsnew/3.5.rst:2225 ../Doc/whatsnew/3.5.rst:2242
 msgid ""
 "``<major>`` is the major number of the Python version; for Python 3.5 this "
 "is ``3``."
 msgstr ""
+"``<major>`` es el número principal de la versión de Python; para Python 3.5 "
+"este es ``3``."
 
 #: ../Doc/whatsnew/3.5.rst:2228 ../Doc/whatsnew/3.5.rst:2245
 msgid ""
 "``<minor>`` is the minor number of the Python version; for Python 3.5 this "
 "is ``5``."
 msgstr ""
+"``<minor>`` es el número menor de la versión de Python; para Python 3.5 este "
+"es ``5``."
 
 #: ../Doc/whatsnew/3.5.rst:2231
 msgid ""
@@ -3818,6 +3903,9 @@ msgid ""
 "built to run on. It's most commonly either ``i386`` for 32-bit Intel "
 "platforms or ``x86_64`` for 64-bit Intel (and AMD) platforms."
 msgstr ""
+"``<architecture>`` es la arquitectura de hardware para la que se construyó "
+"el módulo de extensión. Es más común ``i386`` para plataformas Intel de 32 "
+"bits o ``x86_64`` para plataformas Intel (y AMD) de 64 bits."
 
 #: ../Doc/whatsnew/3.5.rst:2235
 msgid ""
@@ -3825,12 +3913,17 @@ msgid ""
 "32-bit ABI on 64-bit platforms, in which case it is ``linux-gnu32`` (and "
 "``<architecture>`` will be ``x86_64``)."
 msgstr ""
+"``<os>`` siempre es ``linux-gnu``, excepto para las extensiones que se "
+"crearon para comunicarse con la ABI de 32 bits en plataformas de 64 bits, en "
+"cuyo caso es ``linux-gnu32`` (y ``<architecture>`` será ``x86_64``)."
 
 #: ../Doc/whatsnew/3.5.rst:2239
 msgid ""
 "On Windows, extension module filenames end with ``<debug>.cp<major><minor>-"
 "<platform>.pyd``:"
 msgstr ""
+"En Windows, los nombres de archivo del módulo de extensión termina con "
+"``<debug>.cp<major><minor>-<platform>.pyd``:"
 
 #: ../Doc/whatsnew/3.5.rst:2248
 msgid ""
@@ -3838,23 +3931,32 @@ msgid ""
 "``win32`` for Win32, ``win_amd64`` for Win64, ``win_ia64`` for Windows "
 "Itanium 64, and ``win_arm`` for Windows on ARM."
 msgstr ""
+"``<platform>`` es la plataforma para la que se construyó el módulo de "
+"extensión, ya sea ``win32`` para Win32, ``win_amd64`` para Win64, "
+"``win_ia64`` para Windows Itanium 64 y ``win_arm`` para Windows con ARM."
 
 #: ../Doc/whatsnew/3.5.rst:2252
 msgid ""
 "If built in debug mode, ``<debug>`` will be ``_d``, otherwise it will be "
 "blank."
 msgstr ""
+"Si está integrado en el modo de depuración, ``<debug>`` será ``_d``, de lo "
+"contrario estará en blanco."
 
 #: ../Doc/whatsnew/3.5.rst:2255
 msgid ""
 "On OS X platforms, extension module filenames now end with ``-darwin.so``."
 msgstr ""
+"En plataformas OS X, ahora los nombres de archivo del módulo de extensión "
+"terminan con ``-darwin.so``."
 
 #: ../Doc/whatsnew/3.5.rst:2257
 msgid ""
 "On all other platforms, extension module filenames are the same as they were "
 "with Python 3.4."
 msgstr ""
+"En todas las demás plataformas, los nombres de archivo del módulo de "
+"extensión son los mismos que en Python 3.4."
 
 #: ../Doc/whatsnew/3.5.rst:2262
 msgid "Deprecated"
