--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-04-02 20:05+0200\n"
+"PO-Revision-Date: 2021-04-19 13:19+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -119,7 +119,7 @@ msgid ""
 msgstr ""
 "El modulo set se encuentra en la librería estándar y puede ser útil si se "
 "desea usar una subclase de set o ImmutableSet classes. No existen planes de "
-"depreciación del modulo."
+"deprecación del modulo."
 
 #: ../Doc/whatsnew/2.4.rst:83
 msgid ":pep:`218` - Adding a Built-In Set Object Type"
@@ -202,7 +202,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:129
 msgid "instead of  ::"
-msgstr ""
+msgstr "en vez de ::"
 
 #: ../Doc/whatsnew/2.4.rst:136
 msgid ""
@@ -423,6 +423,12 @@ msgid ""
 "either at the module level or inside a class; you can't decorate class "
 "definitions."
 msgstr ""
+"Los decoradores deben agregarse en una linea antes de la definición de la "
+"función, un decorador por linea y no puede estar en la misma linea donde se "
+"usa la palabra def para comenzar una función, por ejemplo ``@A def f(): ..."
+"`` es incorrecto. Solo se puede decorar una definición de función tanto al "
+"nivel de modulo o dentro de una clase pero no puedes decorar definiciones de "
+"clase."
 
 #: ../Doc/whatsnew/2.4.rst:275
 msgid ""
@@ -433,18 +439,29 @@ msgid ""
 "your own decorators.  The following simple example just sets an attribute on "
 "the function object::"
 msgstr ""
+"Un decorador es simplemente una función que toma la función a ser decorada "
+"como un argumento y retorna tanto la misma función o un nuevo objeto. El "
+"valor de retorno del decorador no necesita ser llamado (como típicamente se "
+"cree) si no que los decoradores podrán ser aplicados al resultado. Es fácil "
+"escribir sus propios decoradores, El siguiente ejemplo agrega un atributo a "
+"la función objetiva::"
 
 #: ../Doc/whatsnew/2.4.rst:295
 msgid ""
 "As a slightly more realistic example, the following decorator checks that "
 "the supplied argument is an integer::"
 msgstr ""
+"Como un ejemplo un poco mas realista, el siguiente decorador revisa si el "
+"argumento entregado es un integer::"
 
 #: ../Doc/whatsnew/2.4.rst:313
 msgid ""
 "An example in :pep:`318` contains a fancier version of this idea that lets "
 "you both specify the required type and check the returned type."
 msgstr ""
+"Un ejemplo en :pep:`318`  contiene una versión mas elegante de esta idea "
+"donde deja que usted elija específicamente el tipo y revisa el tipo de "
+"retorno."
 
 #: ../Doc/whatsnew/2.4.rst:316
 msgid ""
@@ -454,11 +471,18 @@ msgid ""
 "function, as previously described.  In other words, ``@A @B @C(args)`` "
 "becomes::"
 msgstr ""
+"Los decoradores de funciones pueden tomar argumentos. Si los argumentos son "
+"entregados, el decorador de la función es llamado con solo esos argumentos y "
+"retorna un nuevo decorador de función, esta función debe tomar una función "
+"sola y retorna una función como previamente se ha descrito. En otras "
+"palabras ``@A @B @C(args)`` comienza:"
 
 #: ../Doc/whatsnew/2.4.rst:325
 msgid ""
 "Getting this right can be slightly brain-bending, but it's not too difficult."
 msgstr ""
+"Tomando esto de forma correcta puede ser un acertijo pero tampoco es muy "
+"dificultoso."
 
 #: ../Doc/whatsnew/2.4.rst:327
 msgid ""
@@ -467,10 +491,14 @@ msgid ""
 "so decorators should change the name of any new function that's constructed "
 "and returned."
 msgstr ""
+"Un pequeño cambio relacionado hace el atributo :attr:`func_name` de la "
+"función modificable. Este atributo es usado para desplegar nombres de "
+"funciones en el rastreo, entonces los decoradores cambia el nombre de "
+"cualquier nueva fgeuincion que es construida y retornada."
 
 #: ../Doc/whatsnew/2.4.rst:338
 msgid ":pep:`318` - Decorators for Functions, Methods and Classes"
-msgstr ""
+msgstr ":pep:`318` Decoradores para funciones, métodos y clases"
 
 #: ../Doc/whatsnew/2.4.rst:336
 msgid ""
@@ -478,30 +506,38 @@ msgid ""
 "wrote patches implementing function decorators, but the one that was "
 "actually checked in was patch #979728, written by Mark Russell."
 msgstr ""
+"Escrito por Kevin D.Smith, Jim Jewett y Skip Montanaro. Varias personal "
+"escribieron parches para implementación de los decoradores de funciones, "
+"pero el ;único que fue chequeado en ese parche #979728 fue Mark Russell."
 
 #: ../Doc/whatsnew/2.4.rst:340
 msgid "https://wiki.python.org/moin/PythonDecoratorLibrary"
-msgstr ""
+msgstr "https://wiki.python.org/moin/PythonDecoratorLibrary"
 
 #: ../Doc/whatsnew/2.4.rst:341
 msgid "This Wiki page contains several examples of decorators."
-msgstr ""
+msgstr "Esta pagina de wiki contiene variados ejemplos de decoradores."
 
 #: ../Doc/whatsnew/2.4.rst:347
 msgid "PEP 322: Reverse Iteration"
-msgstr ""
+msgstr "PEP 322: Iteración inversa"
 
 #: ../Doc/whatsnew/2.4.rst:349
 msgid ""
 "A new built-in function, ``reversed(seq)``, takes a sequence and returns an "
 "iterator that loops over the elements of the sequence  in reverse order.   ::"
 msgstr ""
+"Una nueva función built-in, `reversed(seq)``toma una secuencia y retorna un "
+"iterado que recorre los elementos de la secuencia en orden inverso.:"
 
 #: ../Doc/whatsnew/2.4.rst:359
 msgid ""
 "Compared to extended slicing, such as ``range(1,4)[::-1]``, :func:`reversed` "
 "is easier to read, runs faster, and uses substantially less memory."
 msgstr ""
+"Comparado con el uso tradicional de la segmentación tal como ``range(1,4)"
+"[::-1]`` la :función: `reversed` es fácil de leer, corre mas rápido y usa "
+"sustancialmente menos memoria. ."
 
 #: ../Doc/whatsnew/2.4.rst:362
 msgid ""
@@ -509,18 +545,21 @@ msgid ""
 "If you want to reverse an iterator, first convert it to  a list with :func:"
 "`list`. ::"
 msgstr ""
+"Notese que la :func:`reversed` solo acepta secuencias no iterados "
+"arbitrarios. Si se quiere reversa un iterador, primero se debe convertir a "
+"una lista usando la :func:`list`.:"
 
 #: ../Doc/whatsnew/2.4.rst:376
 msgid ":pep:`322` - Reverse Iteration"
-msgstr ""
+msgstr ":pep:`322` - Iteración inversa"
 
 #: ../Doc/whatsnew/2.4.rst:377
 msgid "Written and implemented by Raymond Hettinger."
-msgstr ""
+msgstr "Escrita e implementada por Raymond Hettinger."
 
 #: ../Doc/whatsnew/2.4.rst:383
 msgid "PEP 324: New subprocess Module"
-msgstr ""
+msgstr "PEP 324: Nuevo modulo de subproceso"
 
 #: ../Doc/whatsnew/2.4.rst:385
 msgid ""
@@ -533,6 +572,15 @@ msgid ""
 "naming is confusing.  The :mod:`subprocess` module cleans  this up, "
 "providing a unified interface that offers all the features you might need."
 msgstr ""
+"La librería estándar provee un cierto numero de formas de ejecutar un "
+"subproceso, ofreciendo diferentes funcionalidades y diferentes niveles de "
+"complejidad. ``os.system(command)`` es fácil de usar pero lento (esto corre "
+"un proceso a nivel de interprete de comandos)y peligroso (se tiene que ser "
+"cuidadoso con no considerar los metacaracteres usados en el interprete)\n"
+"El modulo :mod:`popen2` ofrece clases que puede capturar la salida estándar "
+"y el error estándar del subproceso, pero el nombre puede ser confuso.\n"
+"El modulo mod:`subprocess` deja esto mas claro proveyendo una interface "
+"unificada que ofrece todas las funcionalidades que usted necesita."
 
 #: ../Doc/whatsnew/2.4.rst:394
 msgid ""
@@ -540,6 +588,9 @@ msgid ""
 "a single class called :class:`Popen`  whose constructor supports a number of "
 "different keyword arguments. ::"
 msgstr ""
+"En vez de :mod:`popen2 que es una colección de clases el  :mod:`subprocess` "
+"contiene una sola clase llamada :class:`Popen`  cuyo constructor soporta un "
+"numero de diferentes argumentos de palabra clave:"
 
 #: ../Doc/whatsnew/2.4.rst:404
 msgid ""
@@ -548,6 +599,11 @@ msgid ""
 "*args* can be a string which will then be passed on to the shell for "
 "interpretation, just as :func:`os.system` does.)"
 msgstr ""
+"*args* es comúnmente una secuencia de cadenas de caracteres que podrán ser "
+"los argumentos del programa ejecutado como un subproceso. (Si el argumento "
+"entregado es verdadero, *args* puede ser una cadena de caracteres que serán "
+"pasados en la implementación de la liga de comandos, tal como :func:`os."
+"system` lo hace."
 
 #: ../Doc/whatsnew/2.4.rst:409
 msgid ""
@@ -556,37 +612,50 @@ msgid ""
 "descriptor, or you can use the constant ``subprocess.PIPE`` to create a pipe "
 "between the subprocess and the parent."
 msgstr ""
+"*stdin*, *stdout*, y*stderr* especifica que dato de entrada, salida y error "
+"serán. Se puede proceder un objeto de archivo o un archivo de descripción o "
+"se puede usar la constante ``subprocess.PIPE`` para crear un enlace entre el "
+"subproceso y el proceso principal."
 
 #: ../Doc/whatsnew/2.4.rst:417
 msgid "The constructor has a number of handy options:"
-msgstr ""
+msgstr "El constructor tiene un numero de opciones útiles:"
 
 #: ../Doc/whatsnew/2.4.rst:419
 msgid ""
 "*close_fds* requests that all file descriptors be closed before running the "
 "subprocess."
 msgstr ""
+"*close_fds* requiere que todos los descriptores de archivos sean cerrados "
+"antes de correr el subproceso."
 
 #: ../Doc/whatsnew/2.4.rst:422
 msgid ""
 "*cwd* specifies the working directory in which the subprocess will be "
 "executed (defaulting to whatever the parent's working directory is)."
 msgstr ""
+"*cwd*  especifica el directorio operativo donde el subproceso será ejecutado "
+"(por defecto, cualquiera que sea el directorio principal)"
 
 #: ../Doc/whatsnew/2.4.rst:425
 msgid "*env* is a dictionary specifying environment variables."
 msgstr ""
+"*env*  es un diccionario donde se especifican las variables de entorno."
 
 #: ../Doc/whatsnew/2.4.rst:427
 msgid ""
 "*preexec_fn* is a function that gets called before the child is started."
 msgstr ""
+"*preexec_fn* es una función que toma el llamado antes que el hijo sea "
+"llamado."
 
 #: ../Doc/whatsnew/2.4.rst:429
 msgid ""
 "*universal_newlines* opens the child's input and output using Python's :term:"
 "`universal newlines` feature."
 msgstr ""
+"*universal_newlines* abre el dato de entrada y salida del hijo usando la "
+"característica de Python :term:`universal newlines` ."
 
 #: ../Doc/whatsnew/2.4.rst:432
 msgid ""
@@ -597,6 +666,13 @@ msgid ""
 "then reads any data that the subprocess has sent to its standard output  or "
 "standard error, returning a tuple ``(stdout_data, stderr_data)``."
 msgstr ""
+"Una vez que se ha creado la instancia de la clase `Popen`  se puede llamar "
+"al método :meth:`wait` para poner en pausa hasta que el subproceso ha "
+"terminado, el método :meth:`poll` comprueba si se ha salido sin pausar o el "
+"uso de ``communicate(data)`` envía la cadena de caracteres *data* a la "
+"entrada estándar del subproceso. Y el uso de ``communicate(data)`` que lee "
+"cualquier dato que el subproceso ha enviado a la salida estándar, retornando "
+"una tupla ``(stdout_data, stderr_data)``."
 
 #: ../Doc/whatsnew/2.4.rst:439
 msgid ""
@@ -605,6 +681,10 @@ msgid ""
 "status code of the subprocess.  It can serve as a safer analog to :func:`os."
 "system`::"
 msgstr ""
+":func:`call` es un atajo que pasa estos argumentos a lo largo del "
+"constructor de la clase :class:`Popen`, espera por el comando para completar "
+"la secuencia y retorna el código de estatus del subproceso. Esto puede "
+"servir como un análogo mas seguro de :func:`os.system`:"
 
 #: ../Doc/whatsnew/2.4.rst:451
 msgid ""
@@ -612,6 +692,9 @@ msgid ""
 "use the shell, you can add ``shell=True`` as a keyword argument and provide "
 "a string instead of a sequence::"
 msgstr ""
+"El comando es invocado sin el uso del interprete de comandos. Si se desea "
+"usar el intérprete se puede agregar ``shell=True`` como un argumento de "
+"palabra clave y proveer una cadena de caracteres en vez de una secuencia:"
 
 #: ../Doc/whatsnew/2.4.rst:457
 msgid ""
