--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-04-19 13:19+0200\n"
+"PO-Revision-Date: 2021-04-19 13:28+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -452,7 +452,7 @@ msgid ""
 "the supplied argument is an integer::"
 msgstr ""
 "Como un ejemplo un poco mas realista, el siguiente decorador revisa si el "
-"argumento entregado es un integer::"
+"argumento entregado es un entero::"
 
 #: ../Doc/whatsnew/2.4.rst:313
 msgid ""
@@ -494,7 +494,7 @@ msgstr ""
 "Un pequeño cambio relacionado hace el atributo :attr:`func_name` de la "
 "función modificable. Este atributo es usado para desplegar nombres de "
 "funciones en el rastreo, entonces los decoradores cambia el nombre de "
-"cualquier nueva fgeuincion que es construida y retornada."
+"cualquier nueva función que es construída y retornada."
 
 #: ../Doc/whatsnew/2.4.rst:338
 msgid ":pep:`318` - Decorators for Functions, Methods and Classes"
@@ -545,7 +545,7 @@ msgid ""
 "If you want to reverse an iterator, first convert it to  a list with :func:"
 "`list`. ::"
 msgstr ""
-"Notese que la :func:`reversed` solo acepta secuencias no iterados "
+"Señalar que la :func:`reversed` solo acepta secuencias no iterados "
 "arbitrarios. Si se quiere reversa un iterador, primero se debe convertir a "
 "una lista usando la :func:`list`.:"
 
