--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-04-19 13:28+0200\n"
+"PO-Revision-Date: 2021-04-19 13:35+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -494,7 +494,7 @@ msgstr ""
 "Un pequeño cambio relacionado hace el atributo :attr:`func_name` de la "
 "función modificable. Este atributo es usado para desplegar nombres de "
 "funciones en el rastreo, entonces los decoradores cambia el nombre de "
-"cualquier nueva función que es construída y retornada."
+"cualquier nueva función que es construida y retornada."
 
 #: ../Doc/whatsnew/2.4.rst:338
 msgid ":pep:`318` - Decorators for Functions, Methods and Classes"
