--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1,37 +1,39 @@
 # Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python package.
-# Maintained by the python-doc-es workteam. 
+# Maintained by the python-doc-es workteam.
 # docs-es@python.org / https://mail.python.org/mailman3/lists/docs-es.python.org/
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-04-20 04:13-0500\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: José Luis Salgado Banda\n"
+"Language: es_MX\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/2.2.rst:3
 msgid "What's New in Python 2.2"
-msgstr ""
+msgstr "Qué hay de nuevo en Python 2.2"
 
 #: ../Doc/whatsnew/2.2.rst:0
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/whatsnew/2.2.rst:5
 msgid "A.M. Kuchling"
-msgstr ""
+msgstr "A.M. Kuchling"
 
 #: ../Doc/whatsnew/2.2.rst:13
 msgid "Introduction"
-msgstr ""
+msgstr "Introducción"
 
 #: ../Doc/whatsnew/2.2.rst:15
 msgid ""
@@ -39,6 +41,9 @@ msgid ""
 "14, 2002.  Python 2.2.2 is a bugfix release of Python 2.2, originally "
 "released on December 21, 2001."
 msgstr ""
+"Este artículo explica las nuevas características en Python 2.2.2, publicado "
+"el 14 de octubre de 2002. Python 2.2.2 es una versión de corrección de "
+"errores de Python 2.2, lanzada originalmente el 21 de diciembre de 2001."
 
 #: ../Doc/whatsnew/2.2.rst:19
 msgid ""
@@ -47,6 +52,11 @@ msgid ""
 "of the changes, significant and far-reaching though they may be, are aimed "
 "at cleaning up irregularities and dark corners of the language design."
 msgstr ""
+"Python 2.2 se puede considerar como la \"versión de limpieza\". Hay algunas "
+"características como los generadores e iteradores que son completamente "
+"nuevas, pero la mayoría de los cambios, aunque sean significativos y de gran "
+"alcance, tienen como objetivo limpiar las irregularidades y los rincones "
+"oscuros del diseño del lenguaje."
 
 #: ../Doc/whatsnew/2.2.rst:24
 msgid ""
@@ -58,6 +68,14 @@ msgid ""
 "you want to understand the complete implementation and design rationale for "
 "a change, refer to the PEP for a particular new feature."
 msgstr ""
+"Este artículo no procura proporcionar una especificación completa de las "
+"nuevas características, pero en su lugar proporciona una descripción general "
+"conveniente. Para más detalles, deberías consultar la documentación de "
+"Python 2.2, como `Python Library Reference <https://docs.python.org/2.2/lib/"
+"lib.html>`_ y `Python Reference Manual <https://docs.python.org/2.2/ref/ref."
+"html>`_. Si quieres comprender la justificación completa de la "
+"implementación y el diseño de un cambio, consultar la PEP para conocer una "
+"característica nueva en particular."
 
 #: ../Doc/whatsnew/2.2.rst:43
 msgid "PEPs 252 and 253: Type and Class Changes"
